# harness-lab

./: .gitignore  .gitmodules  .rumdl.toml  CLAUDE.md  README.md  pyproject.toml
apps/simple/: README.md  pyproject.toml
apps/simple/src/: agent.py  commands.py  main.py  prompt.py  session.py
apps/tooled/: README.md  pyproject.toml
apps/tooled/src/: agent.py  commands.py  diagram.py  hooks.py  main.py  memory.py  policy.py  prompt.py  session.py  utils.py
apps/tooled/src/core/: __init__.py  _context.py  agents.py  config.py  hooks.py  memory.py  policy.py  providers.py  session.py  tool.py  utils.py
apps/tooled/src/tools/: __init__.py  agent.py  agent_tool.py  fs.py  shell.py  web.py
docs/: agentic.md  simple.md  tooled.md
src/: cli.py  commands.py  context.py  model.py  policy.py  prompts.py  scheduler.py  schema.py  sessions.py  tools.py
src/agent/: README.md  __init__.py  builder.py  delegation.py  history.py  hooks.py  personas.py
src/cli/: app.py  commands.py  renderer.py  step.py  turn.py
src/cli/commands/: agent.py  schedule.py  todos.py
src/cli/ui/: __init__.py  panels.py  renderer.py  stats.py  tools.py
src/harness/: README.md  __init__.py  background.py  context.py  policy.py  schema.py
src/harness/agent/: builder.py  delegation.py  history.py  personas.py  watcher.py
src/harness/cli/: __init__.py  app.py  step.py  turn.py
src/harness/cli/commands/: __init__.py  agent.py  base.py  jobs.py  logs.py  memory.py  misc.py  registry.py  schedule.py  session.py
src/harness/cli/ui/: panels.py  progress.py  renderer.py  stats.py
src/harness/hooks/: hooks.py
src/harness/memory/: __init__.py  extractor.py  schema.py
src/harness/prompts/agents/: coder.md  history-summarizer.md  planner.md  reviewer.md
src/harness/prompts/instructions/: memory-extract.md  project.md
src/harness/session/: README.md  database.py  schema.py  store.py
src/harness/tools/: background.py  file.py  notes.py  policy.py  registry.py  scheduling.py  search.py  shell.py  skills.py  todos.py
src/hooks/: README.md  __init__.py  hooks.py
src/memory/: README.md  store.py
src/prompts/: AGENTS.md  README.md  _dynamic.md
src/prompts/agents/: memory-extractor.md
src/prompts/instructions/: _dynamic.md
src/prompts/rules/: persona.md
src/session/: __init__.py  database.py  store.py
src/session/repos/: __init__.py  event.py  memory.py  message.py  scheduled.py  todo.py
src/simple_agent/: main.py
src/tools/: README.md  __init__.py  _clip.py  background.py  file.py  notes.py  policy.py  scheduling.py  search.py  shell.py  todos.py
tests/: conftest.py  test_builder.py  test_delegation.py  test_evals_personas.py  test_hooks.py  test_logs_command.py  test_memory_injection.py  test_personas.py  test_schema.py  test_tools.py  test_turn.py
(+9 files in other folders)
