[project]
name = "harness-lab"
version = "0.1.0"
description = "My learning playground for building and testing agentic AI systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
simple = "apps.simple.src.main:main"
tooled = "apps.tooled.src.main:main"

[tool.ruff]
line-length = 200
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    "apps/simple",
    "apps/tooled",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pydantic-evals>=1.80.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
    "rumdl>=0.1.70",
    "taskipy>=1.14.1",
    "ty>=0.0.29",
]
